--- a/app/views/persona_mailer/recibo.html.erb
+++ b/app/views/persona_mailer/recibo.html.erb
@@ -1,2 +1,2 @@
-Hola <%=@persona.nombres.upcase%> <%=@persona.apellidos.upcase%>.
-Le enviamos su recibo de pago de nómina, correspondiente a la <%=$dic["quincena"].key($quincena).capitalize%> de <%=$dic["meses"].key($ahora.month).capitalize%> de <%=$ahora.year%>.
+Estimado, <%=@persona.nombres.upcase%> <%=@persona.apellidos.upcase%>.
+Se le ha enviado su recibo de pago correspondiente a la <%=$dic["quincena"].key($quincena).capitalize%> de <%=$dic["meses"].key($ahora.month).capitalize%> de <%=$ahora.year%>.
