--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@departamento) do |f| %>
+<%= simple_form_for(@departamento, html: {  role: "form"})   do |f| %>
 <%= render 'layouts/errores', :x=>@departamento %>
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -13,7 +13,7 @@
             <span class="input-group-addon">
               <span class="fa fa-align-justify"></span>
             </span>
-            <%= f.text_field :nombre, class: "form-control", REQUIRED: "", autofocus: "" %>
+            <%= f.text_field :nombre, class: "form-control", autofocus: "" %>
           </div>
         </div>
         <div class="col-md-6">
@@ -23,7 +23,7 @@
               <span class="fa fa-building-o"></span>
             </span>
             <% if f.object.dependencia_id=f.object.dependencia_id ? f.object.dependencia_id : 0%>
-            <%= f.select(:dependencia_id, options_for_select(Dependencia.all.map{|s|[s.nombre, s.id]}, f.object.dependencia_id),{include_blank:'Seleccione una Dependencia...'},:class =>"form-control", REQUIRED: "" )  %></span>
+            <%= f.select(:dependencia_id, options_for_select(Dependencia.all.map{|s|[s.nombre, s.id]}, f.object.dependencia_id),{include_blank:'Seleccione una Dependencia...'},:class =>"form-control")  %></span>
           <%end%>
         </div>
       </div>
