--- a/app/views/layouts/_errores.html.erb
+++ b/app/views/layouts/_errores.html.erb
@@ -1,12 +1,18 @@
 <% if x.errors.any? %>
-<div id="error_explanation">
-    <h2>No ha podido ser guardado por:
-        <%= pluralize(x.errors.count, "error") %>.</h2>
+<div class="alert alert-danger alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert">
+    <span aria-hidden="true">&times;</span>
+    <span class="sr-only">Close</span>
+  </button>
+    <h3>No ha podido ser guardado por:
+        <%= pluralize(x.errors.count, "error") %>.</h3>
 
     <ul>
         <% x.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li><%= raw message %></li>
         <% end %>
     </ul>
+
+
 </div>
 <% end %>
