--- a/app/views/personas/_familiar_fields.html.erb
+++ b/app/views/personas/_familiar_fields.html.erb
@@ -5,12 +5,12 @@
   </div>
   <div class="panel-body">
     <div class="col-sm-4">
-      <%= f.label "Cédula" %>
+      <%= f.label :cedula %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-user"></span>
         </span>
-        <%= f.text_field :cedula,:class => "form-control", REQUIRED: "",maxlength: "8", autofocus:"" %>
+        <%= f.text_field :cedula,:class => "form-control",maxlength: "8", autofocus:"" %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -19,7 +19,7 @@
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
         </span>
-        <%= f.text_field :nombres,:class => "form-control", REQUIRED: ""  %>
+        <%= f.text_field :nombres,:class => "form-control"  %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -28,7 +28,7 @@
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
         </span>
-        <%= f.text_field :apellidos,:class => "form-control", REQUIRED: ""  %>
+        <%= f.text_field :apellidos,:class => "form-control"  %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -37,7 +37,7 @@
         <span class="input-group-addon">
           <span class="fa fa-calendar"></span>
         </span>
-        <%= f.date_field :fecha_de_nacimiento,:class => "form-control", REQUIRED: ""  %>
+        <%= f.date_field :fecha_de_nacimiento,:class => "form-control"  %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -46,16 +46,16 @@
         <span class="input-group-addon">
           <span class="fa fa-venus-mars"></span>
         </span>
-        <%= f.select(:sexo, options_for_select($dic["sexos"],f.object.sexo ),{include_blank: 'Seleccione un sexo...'},:class =>"form-control", REQUIRED: ""  ) %>
+        <%= f.select(:sexo, options_for_select($dic["sexos"],f.object.sexo ),{include_blank: 'Seleccione un sexo...'},:class =>"form-control"  ) %>
       </div>
     </div>
     <div class="col-sm-4">
-      <%= f.label "Dirección" %>
+      <%= f.label :direccion %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-home"></span>
         </span>
-        <%= f.text_area :direccion,:class => "form-control", REQUIRED: ""  %>
+        <%= f.text_area :direccion,:class => "form-control"  %>
       </div>
     </div>
 
