--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -1,13 +1,7 @@
-<%= form_for(@persona) do |f| %>
+<%= simple_form_for(@persona, html: {  role: "form"})   do |f| %>
 <%= render 'layouts/errores', :x=>@persona %>
 
-<div class="alert alert-danger alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert">
-    <span aria-hidden="true">&times;</span>
-    <span class="sr-only">Close</span>
-  </button>
-  <%#= raw(messages)%>
-</div>
+
 
 <div class="row">
   <div class="col-md-12 col-sm-12">
