--- a/app/views/personas/_registroconcepto_fields.html.erb
+++ b/app/views/personas/_registroconcepto_fields.html.erb
@@ -9,7 +9,7 @@
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
         </span>
-        <%= f.select(:conceptopersonal_id, options_for_select(Conceptopersonal.all.map{|s|[s.nombre, s.id]},f.object.conceptopersonal_id),{include_blank:'Seleccione un concepto...'}, class: 'form-control',REQUIRED: "")  %>
+        <%= f.select(:conceptopersonal_id, options_for_select(Conceptopersonal.all.map{|s|[s.nombre, s.id]},f.object.conceptopersonal_id),{include_blank:'Seleccione un concepto...'}, class: 'form-control')  %>
       </div>
     </div>
         <div class="col-xs-6">
@@ -19,7 +19,7 @@
           <span class="fa fa-calendar-o"></span>
         </span>
 
-    <%= f.select(:modalidad_de_pago, options_for_select($dic["modalidad_de_pago"],f.object.modalidad_de_pago),{include_blank: 'Seleccione el modo de pago...'},:class =>"form-control",REQUIRED: "" )  %>
+    <%= f.select(:modalidad_de_pago, options_for_select($dic["modalidad_de_pago"],f.object.modalidad_de_pago),{include_blank: 'Seleccione el modo de pago...'},:class =>"form-control" )  %>
       </div>
     </div>
     <%if f.object.formulaspersonales.length==0
@@ -32,21 +32,21 @@
 
 <%# if formula_builder.object.activo? %>
     <div class="col-xs-6">
-      <%= formula_builder.label "Aporte/Cobro de empleado" %><br>
+      <%= formula_builder.label :empleado %><br>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-calculator"></span>
         </span>
-        <%= formula_builder.text_area :empleado, class: "form-control code", REQUIRED: ""%>
+        <%= formula_builder.text_area :empleado, class: "form-control code"%>
       </div>
     </div>
     <div class="col-xs-6">
-      <%= formula_builder.label "Aporte del patrono" %><br>
+      <%= formula_builder.label :patrono %><br>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-calculator"></span>
         </span>
-        <%= formula_builder.text_area :patrono, class: "form-control code", REQUIRED: ""%>
+        <%= formula_builder.text_area :patrono, class: "form-control code"%>
       </div>
     </div>
 
