--- a/app/views/tipos/_form.html.erb
+++ b/app/views/tipos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@tipo) do |f| %>
+<%= simple_form_for(@tipo, html: {  role: "form"})   do |f| %>
 <%= render 'layouts/errores', :x=>@tipo %>
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -12,7 +12,7 @@
           <span class="input-group-addon">
             <span class="fa fa-align-justify"></span>
           </span>
-          <%= f.text_field :nombre, class: "form-control", REQUIRED: "", autofocus: "" %>
+          <%= f.text_field :nombre, class: "form-control", autofocus: "" %>
         </div>
       </div>
       <%= render 'layouts/botones', p: tipos_path  %>
