--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -23,204 +23,291 @@
             <%= link_to ' Recibo', persona_path(@persona,format: "pdf")+"?doc=0",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos en el nomina." %>
             <%= link_to '', persona_path(@persona,format: "pdf")+"?doc=1",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
             <%= link_to '', enviar_persona_path(@persona)+"?redir=1", method: :post, data: { confirm: 'Esta seguro?' },class: "btn btn-default fa fa-envelope reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Enviar Al correo electronico"%>
-            <%= link_to '', enviar_persona_path(@persona)+"?redir=1", method: :post, data: { confirm: 'Esta seguro?' },class: "btn btn-default fa fa-search","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Ver reportes anteriores"%>
           </div>
         </li>
         <li role="separator" style="margin:4px;"></li>
-
         <li class="text-center">
-          <div class="btn-group btn-group-md form-inline" role="group" aria-label="...">
-            <%= link_to ' Constancia', persona_path(@persona,format: "pdf")+"?doc=2",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos en el nomina." %>
-            <%= link_to '', persona_path(@persona,format: "pdf")+"?doc=3",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
+            <div class="btn-group btn-group-md form-inline" role="group" aria-label="...">
+          <button class="btn btn-default" type="button" data-toggle="modal" data-target="#myModal">
+            <i class="fa fa-cog"> Ver recibos pasados</i>
+          </button>
+        </div>
+      </li>
+      <li role="separator" style="margin:4px;"></li>
 
-          </div>
-        </li>
+      <li class="text-center">
+        <div class="btn-group btn-group-md form-inline" role="group" aria-label="...">
+          <%= link_to ' Constancia', persona_path(@persona,format: "pdf")+"?doc=2",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos en el nomina." %>
+          <%= link_to '', persona_path(@persona,format: "pdf")+"?doc=3",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
 
-      </ul>
-    </li>
-    <% if can? :edit, Persona %>
-    <li role="presentation">
+        </div>
+      </li>
 
-      <a class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cambiar estado
-        <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu text-center"  style="width:100%;">
-        <% case @persona.status
+    </ul>
+  </li>
+  <% if can? :edit, Persona %>
+  <li role="presentation">
+
+    <a class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cambiar estado
+      <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu text-center" style="width:100%;">
+      <% case @persona.status
       when 'activo'
     %>
-        <li><%= link_to 'Suspender', cambiarestado_persona_path(@persona, :estado =>3), method: :post, data: { confirm: 'Esta seguro?' } %></li>
-        <li><%= link_to 'Retirar',  cambiarestado_persona_path(@persona, :estado =>0), method: :post, data: { confirm: 'Esta seguro?' } %></li>
-        <% when 'retirado'%>
+      <li><%= link_to 'Suspender', cambiarestado_persona_path(@persona, :estado =>3), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+      <li><%= link_to 'Retirar',  cambiarestado_persona_path(@persona, :estado =>0), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+      <% when 'retirado'%>
 
-        <li><%= link_to 'Reingresar',  cambiarestado_persona_path(@persona, :estado =>2), method: :post, data: { confirm: 'Esta seguro?' } %></li>
-        <% when 'suspendido'%>
-        <li><%= link_to 'Reactivar',  cambiarestado_persona_path(@persona, :estado =>1), method: :post, data: { confirm: 'Esta seguro?' } %></li>
-        <%end%>
+      <li><%= link_to 'Reingresar',  cambiarestado_persona_path(@persona, :estado =>2), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+      <% when 'suspendido'%>
+      <li><%= link_to 'Reactivar',  cambiarestado_persona_path(@persona, :estado =>1), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+      <%end%>
 
-      </ul>
-    </li>
-    <%end%>
-  </ul>
+    </ul>
+  </li>
+  <%end%>
+</ul>
 </div>
 <p class="col-md-12"></p>
 <div class="col-sm-4">
-  <!--left col-->
-  <ul class="list-group">
-    <li class="list-group-item text-muted" contenteditable="false">Perfil</li>
-    <li class="list-group-item text-right">
-      <span class="pull-left">
-        <strong class="">Estado</strong>
-      </span>
-      <%= @persona.status.capitalize %></li>
-    <li class="list-group-item text-right">
-      <span class="pull-left">
-        <strong class="">Departamento</strong>
-      </span>
-      <%= @persona.cargo.departamento.nombre.capitalize %></li>
-    <li class="list-group-item text-right">
-      <span class="pull-left">
-        <strong class="">Cargo</strong>
-      </span>
-      <%= @persona.cargo.nombre.capitalize%></li>
-    <li class="list-group-item text-right">
-      <span class="pull-left">
-        <strong class="">Sueldo Normal</strong>
-      </span>
-      <%= @persona.cargo.sueldos.last.monto%></li>
-    <li class="list-group-item text-right">
-      <span class="pull-left">
-        <strong class="">Sueldo Integral</strong>
-      </span>
-      <%= @persona.cargo.sueldos.last.sueldo_integral%></li>
-    <li class="list-group-item text-right">
-      <span class="pull-left">
-        <strong class="">Cédula</strong>
-      </span>
-      <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
-    <li class="list-group-item text-right">
-      <span class="pull-left">
-        <strong class="">Teléfonos</strong>
-      </span><%= @persona.telefono_fijo %><br>
-      <%= @persona.telefono_movil %></li>
-  </li>
+<!--left col-->
+<ul class="list-group">
+  <li class="list-group-item text-muted" contenteditable="false">Perfil</li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Correo</strong>
+      <strong class="">Estado</strong>
     </span>
-    <%= @persona.correo %></li>
+    <%= @persona.status.capitalize %></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Cuenta</strong>
+      <strong class="">Departamento</strong>
     </span>
-    <%= @persona.cuenta %></li>
+    <%= @persona.cargo.departamento.nombre.capitalize %></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Fecha de nacimiento</strong>
+      <strong class="">Cargo</strong>
     </span>
-    <%= @persona.fecha_de_nacimiento.strftime("%d/#{$dic["meses"].key(@persona.fecha_de_nacimiento.month).capitalize}/%Y") %></li>
+    <%= @persona.cargo.nombre.capitalize%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Direccion</strong>
-    </span><%= @persona.direccion.capitalize %></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Sexo</strong>
-    </span><%= $dic["sexos"].key(@persona.sexo) %></li>
-  <li class="list-group-item text-muted" contenteditable="false">Contrato</li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Tipo</strong>
+      <strong class="">Sueldo Normal</strong>
     </span>
-    <%= $dic["tipos_de_contrato"].key(@persona.contrato.tipo_de_contrato)%></li>
+    <%= @persona.cargo.sueldos.last.monto%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Fecha de inicio</strong>
+      <strong class="">Sueldo Integral</strong>
     </span>
-    <%= @persona.contrato.fecha_inicio.strftime("%d/#{$dic["meses"].key(@persona.contrato.fecha_inicio.month).capitalize}/%Y")%></li>
+    <%= @persona.cargo.sueldos.last.sueldo_integral%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Años de servicio</strong>
+      <strong class="">Cédula</strong>
     </span>
-    <%= distance_of_time_in_words_hash(@persona.contrato.fecha_inicio,Time.now)[:years]%></li>
-  <% if @persona.contrato.tipo_de_contrato == 1%>
+    <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Fecha de fin</strong>
-    </span>
-    <%= @persona.contrato.fecha_fin%></li>
-  <%elsif @persona.contrato.tipo_de_contrato == 2%>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Sueldo Externo</strong>
-    </span>
-    <%= @persona.contrato.sueldo_externo%></li>
-  <%end%>
+      <strong class="">Teléfonos</strong>
+    </span><%= @persona.telefono_fijo %><br>
+    <%= @persona.telefono_movil %></li>
+</li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Correo</strong>
+  </span>
+  <%= @persona.correo %></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Cuenta</strong>
+  </span>
+  <%= @persona.cuenta %></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Fecha de nacimiento</strong>
+  </span>
+  <%= @persona.fecha_de_nacimiento.strftime("%d/#{$dic["meses"].key(@persona.fecha_de_nacimiento.month).capitalize}/%Y") %></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Direccion</strong>
+  </span><%= @persona.direccion.capitalize %></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Sexo</strong>
+  </span><%= $dic["sexos"].key(@persona.sexo) %></li>
+<li class="list-group-item text-muted" contenteditable="false">Contrato</li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Tipo</strong>
+  </span>
+  <%= $dic["tipos_de_contrato"].key(@persona.contrato.tipo_de_contrato)%></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Fecha de inicio</strong>
+  </span>
+  <%= @persona.contrato.fecha_inicio.strftime("%d/#{$dic["meses"].key(@persona.contrato.fecha_inicio.month).capitalize}/%Y")%></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Años de servicio</strong>
+  </span>
+  <%= distance_of_time_in_words_hash(@persona.contrato.fecha_inicio,Time.now)[:years]%></li>
+<% if @persona.contrato.tipo_de_contrato == 1%>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Fecha de fin</strong>
+  </span>
+  <%= @persona.contrato.fecha_fin%></li>
+<%elsif @persona.contrato.tipo_de_contrato == 2%>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Sueldo Externo</strong>
+  </span>
+  <%= @persona.contrato.sueldo_externo%></li>
+<%end%>
 </ul>
 </div>
 
 <div class="col-sm-8">
 <ul class="list-group">
-  <li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte '+$dic['modalidad_de_pago'].key($quincena)+' ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
-  <li class="list-group-item">
-    <table class="table table-hover table-condensed">
-      <thead>
-        <tr>
-          <th>CONCEPTO</th>
-          <th>ASIGNACION</th>
-          <th>DEDUCCION</th>
-          <th>TOTAL</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @persona.asignaciones.each do |c| %>
-        <tr>
-          <td><%= c['nombre'].upcase%></td>
-          <td><%=c['valor']%></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <% end %>
+<li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte '+$dic['modalidad_de_pago'].key($quincena)+' ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
+<li class="list-group-item">
+  <table class="table table-hover table-condensed">
+    <thead>
+      <tr>
+        <th>CONCEPTO</th>
+        <th>ASIGNACION</th>
+        <th>DEDUCCION</th>
+        <th>TOTAL</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @persona.asignaciones.each do |c| %>
+      <tr>
+        <td><%= c['nombre'].upcase%></td>
+        <td><%=c['valor']%></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <% end %>
 
-        <% @valor=0
+      <% @valor=0
           @persona.deducciones.each do |c| %>
-        <tr>
-          <td><%= c['nombre'].upcase%></td>
-          <td></td>
-          <td><%=c['valor']%></td>
-          <td></td>
-        </tr>
-        <% end %>
+      <tr>
+        <td><%= c['nombre'].upcase%></td>
+        <td></td>
+        <td><%=c['valor']%></td>
+        <td></td>
+      </tr>
+      <% end %>
 
-        <tr>
-          <th></th>
-          <th><%=
+      <tr>
+        <th></th>
+        <th><%=
             truncar(@persona.total_asignaciones)%></th>
-          <th><%=
+        <th><%=
               (@persona.total_deducciones)
             %></th>
-          <th><%= truncar(@persona.total).to_s+"  BsF." %></th>
-        </tr>
-      </tbody>
-    </table>
-  </li>
+        <th><%= truncar(@persona.total).to_s+"  BsF." %></th>
+      </tr>
+    </tbody>
+  </table>
+</li>
 </ul>
 </div>
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-<div class="modal-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <h4 class="modal-title" id="myModalLabel">Modal title Here</h4>
-    </div>
-    <div class="modal-body">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary">Save changes</button>
-    </div>
+<div class="modal fade" id="myModal" style="margin-top:60px;" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <h4 class="modal-title" id="myModalLabel">
+      <i class="fa fa-file-pdf-o fa-2x"></i>
+      Generador de recibo de pago</h4>
   </div>
+  <div class="modal-body ">
+
+    <div class="col-xs-12 form-group">
+      <%= label_tag "Quincena" %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-calendar fa-fw"></span>
+        </span>
+
+        <select class="btn btn-default dropdown-toggle" id="quincena">
+          <option value="">Seleccione la quincena...</option>
+          <%
+sueldo=Sueldo.first.created_at
+
+i=1
+
+while sueldo<$ahora
+
+quincena = (sueldo.day <= 15) ? 0 : 1
+dia= (quincena) ? 17 : 11
+fecha="#{dia}-#{sueldo.month}-#{sueldo.year}";
+%>
+
+          <option value="<%=fecha %>"><%= $dic["quincena"].key(quincena)+ $dic["meses"].key(sueldo.month) +" del #{sueldo.year}"%></option>
+        <%  if quincena==0
+
+
+sueldo= Date.strptime("16-#{sueldo.mon}-#{sueldo.year}", '%d-%m-%Y')
+else
+if sueldo.mon==12
+sueldo=Date.strptime("1-1-#{sueldo.year+1}", '%d-%m-%Y')
+else
+sueldo= Date.strptime("1-#{sueldo.mon+1}-#{sueldo.year}", '%d-%m-%Y')
+end
+
+end
+end%>
+
+        </select>
+      </div>
+    </div>
+  </br>
+</br>
+</br>
+</br>
+
+</div>
+<div class="modal-footer">
+<div class="btn-group btn-group-md form-inline" role="group" aria-label="...">
+<button type="button" class="btn btn-primary" id="generar_boton" name="button">
+<i class="fa fa-cog"></i>
+Generar</button>
+<button type="button" class="btn btn-success" id="generar_boton_eco" name="button">
+<i class="fa fa-leaf"></i>
+</button>
+</div>
+<button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
 </div>
 </div>
+</div>
+</div>
+
+<script type="text/javascript">
+
+function generar(eco) {
+
+  var params = '?doc=' + parseInt(0 + eco) + '&ahora=' + $('#quincena').val();
+  var win = window.open('<%=personas_path%>/<%=@persona.id%>.pdf' + params, '_blank');
+  if (win) {
+    //Browser has allowed it to be opened
+    win.focus();
+  } else {
+    //Broswer has blocked it
+    alert('Please allow popups for this site');
+  }
+}
+
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip();
+  $('#generar_boton').click(function () {
+    generar(0);
+  });
+  $('#generar_boton_eco').click(function () {
+    generar(1);
+  });
+});
+</script>
